# stdbench

./: .gitignore  CMakeLists.txt  LICENSE  README.md  algorithms_classification.txt  build.sh  conanfile.py  lint.sh  presentation.odp  pyproject.toml  run_act.sh  test.sh
.github/actions/build-composite/: action.yaml
.github/workflows/: python-app.yml  workflow.yaml
benchmarks/: copy.cpp  copy_if.cpp
examples/: CMakeLists.txt  config.json  copy.cpp  copy.jinja  transform.cpp
presentation/: presentation.odp
src/stdbench/: __main__.py  bench_compiler.py  bench_factory.py  bench_generator.py  bench_runner.py  benchmark.py  compiler.py  config.py  generator.py  plotter.py  renderers.py  results_analyzer.py  runner.py  template.py  test_generator.py  utils.py
src/stdbench/codegen/: __init__.py  __main__.py  codegen.py
templates/: algorithm_benchmark.jinja  base.jinja  benchmark.jinja  googlebenchmark.jinja  input_output_range.jinja  input_output_range_sub.jinja  input_range.jinja  input_range_dest.jinja  input_range_dest_nopred.jinja  input_range_noreturn.jinja  input_range_noreturn_val.jinja  input_range_output_iterator.jinja  input_range_value.jinja  input_range_value_pred.jinja  input_value.jinja  input_value_count.jinja  reduce.impl  sort.impl  transform.impl  two_sequence.jinja  two_sequence.yaml
tests/: config.yaml  input_output_range.yaml  input_output_range_sub.yaml  input_range.py  input_range.yaml  input_range_dest.yaml  input_range_dest_nopred.yaml  input_range_gen.yaml  input_range_gen_n.yaml  input_range_noreturn.yaml  input_range_noreturn_val.yaml  input_range_sort.yaml  input_range_value.yaml  input_range_value_pred.yaml  input_value.yaml  test_benchmarks.py  test_config.py  test_generation.py  test_generator.py  test_generators.py  two_sequence.yaml
tests/benchmarks/: transform.cpp
